--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/williamg/ugly/issues"
   },
-  "homepage": "https://github.com/williamg/ugly#readme"
+  "homepage": "https://github.com/williamg/ugly#readme",
+  "dependencies": {
+    "express": "^4.12.4"
+  }
 }
