--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/williamg/ugly#readme",
   "dependencies": {
-    "express": "^4.12.4"
+    "express": "^4.12.4",
+    "ws": "^0.7.2"
   }
 }
