--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/williamg/ugly#readme",
   "dependencies": {
+    "commander": "^2.8.1",
     "express": "^4.12.4",
     "nodeunit": "^0.9.1",
     "ws": "^0.7.2"
