Code cleanups and refactor
- CLI moved to bin/launcher.js
- Validation moved to lib/validator.js
- Server-to-client communication moved to lib/chunkSender.js
- ugly.js moved to lib/ugly.js

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "ugly",
   "version": "1.0.0",
   "description": "A universal graphics library.",
-  "main": "ugly.js",
+  "main": "bin/launcher.js",
   "scripts": {
-    "test": "./tests/test"
+    "test": "./tests/test",
+    "start": "bin/launcher.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,6 @@
     "ws": "^0.7.2"
   },
   "bin": {
-    "ugly": "ugly.js"
+    "ugly": "bin/launcher.js"
   }
 }
