--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "commander": "^2.8.1",
     "express": "^4.12.4",
     "nodeunit": "^0.9.1",
+    "winston": "^1.0.1",
     "ws": "^0.7.2"
   },
   "bin": {
